Clear pending resource load statistics' writes after tests https://bugs.webkit.org/show_bug.cgi?id=189632 <rdar://problem/44469275>

Patch by Woodrow Wang <woodrow_wang@apple.com> on 2018-09-17
Reviewed by Chris Dumez.

* UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
(WKWebsiteDataStoreStatisticsResetToConsistentState):

Canonical link: https://commits.webkit.org/204630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236071 268f45cc-cd09-0410-ab3c-d52691b4dbfc